Make sure side always stretches

--- a/src/styles/components/Product/Overview.module.scss
+++ b/src/styles/components/Product/Overview.module.scss
@@ -35,6 +35,7 @@
     }
 
     .side {
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: stretch;
